--- a/Index.html
+++ b/Index.html
@@ -259,9 +259,9 @@
 					
 					<h3>Trainnings</h3>
 					
-					<!-- <h4> Introduction to Back-End Development (Course), Coursera sep-Oct’ 23</h4>
-					<h4> Introduction to Front-End Development (Course), Coursera Nov-Dec’ 22</h4>
-			<h4>Python for beginners (Course), TechEdu Aug-Sep’ 21</h4> -->
+					<!-- <h4> Introduction to Back-End Development (Course), Coursera sep-Oct 23</h4>
+					<h4> Introduction to Front-End Development (Course), Coursera Nov-Dec 22</h4>
+			<h4>Python for beginners (Course), TechEdu Aug-Sep 21</h4> -->
 
 			
 				<p>Introduction to Back-End Development (Course), Coursera sep-Oct’ 23</p>
